--- a/package.json
+++ b/package.json
@@ -18,6 +18,12 @@
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
+    "@ionic/angular": "^7.1.1",
+    "@ionic/storage": "^4.0.0",
+    "@ionic/storage-angular": "^4.0.0",
+    "angular-oauth2-oidc": "^15.0.1",
+    "axios": "^1.4.0",
+    "file-saver": "^2.0.5",
     "makerjs": "^0.18.0",
     "opentype.js": "^1.3.4",
     "rxjs": "~7.8.0",
@@ -28,6 +34,7 @@
     "@angular-devkit/build-angular": "^16.1.0",
     "@angular/cli": "~16.1.0",
     "@angular/compiler-cli": "^16.1.0",
+    "@types/file-saver": "^2.0.5",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
